# rsb-bh8-hardware-integration

./: CMakeLists.txt  README.md
ops/: test-bridge.ops
python/: liveFTplot.py
src/: rsb-bh8-interface.cpp  rsb-bh8-interface.hpp
src/filter/: butterworth.h  butterworth_solver.c
src/orocos/: rsb-bh8-orocos.cpp  rsb-bh8-orocos.hpp
